--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-color": "^3.0.12",
     "clsx": "^2.1.1",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
+    "react-color": "^2.19.3",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-icons": "^5.3.0"
   },
