--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-color": "^2.19.3",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
