--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   },
   "dependencies": {
     "@types/react-color": "^3.0.12",
+    "@uidotdev/usehooks": "^2.4.1",
+    "axios": "^1.7.7",
     "clsx": "^2.1.1",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-color": "^2.19.3",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react-easy-crop": "^5.1.0",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
