--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.13.5",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-color": "^2.19.3",
