--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-easy-crop": "^5.1.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-select": "^5.8.3",
     "uuid": "^11.0.3"
   },
