--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.3.0",
     "react-loading-skeleton": "^3.5.0",
     "react-select": "^5.8.3",
+    "tailwind-merge": "^2.6.0",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
